<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAlarmActivity">

    <ToggleButton
        android:id="@+id/switch1"
        android:layout_width="95dp"
        android:layout_height="59dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:onClick="OnToggleClicked"
        android:text="@string/repeat_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="244dp"
        android:layout_height="322dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/DatePicker1"
        android:layout_width="192dp"
        android:layout_height="400dp"
        android:layout_marginTop="312dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ScheduleAlarmbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:onClick="onSchedule"
        android:text="@string/schedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="464dp"
        android:text="@string/repeat_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addAlHombutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:text="@string/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="396dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</android.support.constraint.ConstraintLayout>